instamal/instantiator/helpers/SpecParser.py
# Generated from /home/birger/github/master-thesis/instamal/instantiator/helpers/Spec.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SpecParser ( Parser ):

    grammarFileName = "Spec.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'connect'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "':'", "';'", "'-->'", "'='", "'.'", 
                     "','", "'+'", "'-'", "'*'", "'/'", "'^'" ]

    symbolicNames = [ "<INVALID>", "LET", "CONNECT", "STRING", "INT", "FLOAT", 
                      "ID", "LPAREN", "RPAREN", "LCURLY", "RCURLY", "LSQUARE", 
                      "RSQUARE", "COLON", "SEMICOLON", "RARROW", "ASSIGN", 
                      "DOT", "COMMA", "PLUS", "MINUS", "TIMES", "DIVIDE", 
                      "POWER", "COMMENT", "ML_COMMENT", "WS" ]

    RULE_spec = 0
    RULE_number = 1
    RULE_expr = 2
    RULE_sign = 3
    RULE_term = 4
    RULE_fact = 5
    RULE_prim = 6
    RULE_distributionSample = 7
    RULE_parameters = 8
    RULE_let = 9
    RULE_variable = 10
    RULE_assetSet = 11
    RULE_assetInstantiation = 12
    RULE_connect = 13
    RULE_connectionRule = 14
    RULE_associationFieldname = 15

    ruleNames =  [ "spec", "number", "expr", "sign", "term", "fact", "prim", 
                   "distributionSample", "parameters", "let", "variable", 
                   "assetSet", "assetInstantiation", "connect", "connectionRule", 
                   "associationFieldname" ]

    EOF = Token.EOF
    LET=1
    CONNECT=2
    STRING=3
    INT=4
    FLOAT=5
    ID=6
    LPAREN=7
    RPAREN=8
    LCURLY=9
    RCURLY=10
    LSQUARE=11
    RSQUARE=12
    COLON=13
    SEMICOLON=14
    RARROW=15
    ASSIGN=16
    DOT=17
    COMMA=18
    PLUS=19
    MINUS=20
    TIMES=21
    DIVIDE=22
    POWER=23
    COMMENT=24
    ML_COMMENT=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SpecParser.EOF, 0)

        def let(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.LetContext)
            else:
                return self.getTypedRuleContext(SpecParser.LetContext,i)


        def connect(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.ConnectContext)
            else:
                return self.getTypedRuleContext(SpecParser.ConnectContext,i)


        def getRuleIndex(self):
            return SpecParser.RULE_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = SpecParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==2:
                self.state = 34
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 32
                    self.let()
                    pass
                elif token in [2]:
                    self.state = 33
                    self.connect()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39
            self.match(SpecParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SpecParser.INT, 0)

        def FLOAT(self):
            return self.getToken(SpecParser.FLOAT, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_number

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = SpecParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.TermContext)
            else:
                return self.getTypedRuleContext(SpecParser.TermContext,i)


        def sign(self):
            return self.getTypedRuleContext(SpecParser.SignContext,0)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(SpecParser.PLUS)
            else:
                return self.getToken(SpecParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(SpecParser.MINUS)
            else:
                return self.getToken(SpecParser.MINUS, i)

        def getRuleIndex(self):
            return SpecParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = SpecParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19 or _la==20:
                self.state = 43
                self.sign()


            self.state = 46
            self.term()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19 or _la==20:
                self.state = 47
                _la = self._input.LA(1)
                if not(_la==19 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 48
                self.term()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(SpecParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(SpecParser.MINUS, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_sign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSign" ):
                return visitor.visitSign(self)
            else:
                return visitor.visitChildren(self)




    def sign(self):

        localctx = SpecParser.SignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not(_la==19 or _la==20):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fact(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.FactContext)
            else:
                return self.getTypedRuleContext(SpecParser.FactContext,i)


        def TIMES(self, i:int=None):
            if i is None:
                return self.getTokens(SpecParser.TIMES)
            else:
                return self.getToken(SpecParser.TIMES, i)

        def DIVIDE(self, i:int=None):
            if i is None:
                return self.getTokens(SpecParser.DIVIDE)
            else:
                return self.getToken(SpecParser.DIVIDE, i)

        def getRuleIndex(self):
            return SpecParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = SpecParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.fact()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21 or _la==22:
                self.state = 57
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 58
                self.fact()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.PrimContext)
            else:
                return self.getTypedRuleContext(SpecParser.PrimContext,i)


        def POWER(self):
            return self.getToken(SpecParser.POWER, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_fact

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFact" ):
                return visitor.visitFact(self)
            else:
                return visitor.visitChildren(self)




    def fact(self):

        localctx = SpecParser.FactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fact)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.prim()
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 65
                self.match(SpecParser.POWER)
                self.state = 66
                self.prim()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(SpecParser.NumberContext,0)


        def LPAREN(self):
            return self.getToken(SpecParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(SpecParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(SpecParser.RPAREN, 0)

        def distributionSample(self):
            return self.getTypedRuleContext(SpecParser.DistributionSampleContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_prim

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrim" ):
                return visitor.visitPrim(self)
            else:
                return visitor.visitChildren(self)




    def prim(self):

        localctx = SpecParser.PrimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_prim)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 69
                self.number()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.match(SpecParser.LPAREN)
                self.state = 71
                self.expr()
                self.state = 72
                self.match(SpecParser.RPAREN)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.distributionSample()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DistributionSampleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SpecParser.ID, 0)

        def LPAREN(self):
            return self.getToken(SpecParser.LPAREN, 0)

        def parameters(self):
            return self.getTypedRuleContext(SpecParser.ParametersContext,0)


        def RPAREN(self):
            return self.getToken(SpecParser.RPAREN, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_distributionSample

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDistributionSample" ):
                return visitor.visitDistributionSample(self)
            else:
                return visitor.visitChildren(self)




    def distributionSample(self):

        localctx = SpecParser.DistributionSampleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_distributionSample)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(SpecParser.ID)
            self.state = 78
            self.match(SpecParser.LPAREN)
            self.state = 79
            self.parameters()
            self.state = 80
            self.match(SpecParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.ExprContext)
            else:
                return self.getTypedRuleContext(SpecParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SpecParser.COMMA)
            else:
                return self.getToken(SpecParser.COMMA, i)

        def getRuleIndex(self):
            return SpecParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = SpecParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.expr()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 83
                self.match(SpecParser.COMMA)
                self.state = 84
                self.expr()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(SpecParser.LET, 0)

        def variable(self):
            return self.getTypedRuleContext(SpecParser.VariableContext,0)


        def ASSIGN(self):
            return self.getToken(SpecParser.ASSIGN, 0)

        def assetSet(self):
            return self.getTypedRuleContext(SpecParser.AssetSetContext,0)


        def SEMICOLON(self):
            return self.getToken(SpecParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_let

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet" ):
                return visitor.visitLet(self)
            else:
                return visitor.visitChildren(self)




    def let(self):

        localctx = SpecParser.LetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_let)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(SpecParser.LET)
            self.state = 91
            self.variable()
            self.state = 92
            self.match(SpecParser.ASSIGN)
            self.state = 93
            self.assetSet()
            self.state = 94
            self.match(SpecParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SpecParser.ID, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = SpecParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(SpecParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssetSetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(SpecParser.VariableContext,0)


        def assetInstantiation(self):
            return self.getTypedRuleContext(SpecParser.AssetInstantiationContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_assetSet

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssetSet" ):
                return visitor.visitAssetSet(self)
            else:
                return visitor.visitChildren(self)




    def assetSet(self):

        localctx = SpecParser.AssetSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assetSet)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                self.variable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                self.assetInstantiation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssetInstantiationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SpecParser.ID, 0)

        def LPAREN(self):
            return self.getToken(SpecParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SpecParser.RPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(SpecParser.ExprContext,0)


        def getRuleIndex(self):
            return SpecParser.RULE_assetInstantiation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssetInstantiation" ):
                return visitor.visitAssetInstantiation(self)
            else:
                return visitor.visitChildren(self)




    def assetInstantiation(self):

        localctx = SpecParser.AssetInstantiationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assetInstantiation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(SpecParser.ID)
            self.state = 103
            self.match(SpecParser.LPAREN)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1573104) != 0):
                self.state = 104
                self.expr()


            self.state = 107
            self.match(SpecParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONNECT(self):
            return self.getToken(SpecParser.CONNECT, 0)

        def LCURLY(self):
            return self.getToken(SpecParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(SpecParser.RCURLY, 0)

        def connectionRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.ConnectionRuleContext)
            else:
                return self.getTypedRuleContext(SpecParser.ConnectionRuleContext,i)


        def getRuleIndex(self):
            return SpecParser.RULE_connect

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnect" ):
                return visitor.visitConnect(self)
            else:
                return visitor.visitChildren(self)




    def connect(self):

        localctx = SpecParser.ConnectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_connect)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(SpecParser.CONNECT)
            self.state = 110
            self.match(SpecParser.LCURLY)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4 or _la==5:
                self.state = 111
                self.connectionRule()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(SpecParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectionRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(SpecParser.NumberContext,0)


        def COLON(self):
            return self.getToken(SpecParser.COLON, 0)

        def assetSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SpecParser.AssetSetContext)
            else:
                return self.getTypedRuleContext(SpecParser.AssetSetContext,i)


        def RARROW(self):
            return self.getToken(SpecParser.RARROW, 0)

        def associationFieldname(self):
            return self.getTypedRuleContext(SpecParser.AssociationFieldnameContext,0)


        def SEMICOLON(self):
            return self.getToken(SpecParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_connectionRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConnectionRule" ):
                return visitor.visitConnectionRule(self)
            else:
                return visitor.visitChildren(self)




    def connectionRule(self):

        localctx = SpecParser.ConnectionRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_connectionRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.number()
            self.state = 120
            self.match(SpecParser.COLON)
            self.state = 121
            self.assetSet()
            self.state = 122
            self.match(SpecParser.RARROW)
            self.state = 123
            self.associationFieldname()
            self.state = 124
            self.assetSet()
            self.state = 125
            self.match(SpecParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssociationFieldnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSQUARE(self):
            return self.getToken(SpecParser.LSQUARE, 0)

        def ID(self):
            return self.getToken(SpecParser.ID, 0)

        def RSQUARE(self):
            return self.getToken(SpecParser.RSQUARE, 0)

        def getRuleIndex(self):
            return SpecParser.RULE_associationFieldname

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssociationFieldname" ):
                return visitor.visitAssociationFieldname(self)
            else:
                return visitor.visitChildren(self)




    def associationFieldname(self):

        localctx = SpecParser.AssociationFieldnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_associationFieldname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(SpecParser.LSQUARE)
            self.state = 128
            self.match(SpecParser.ID)
            self.state = 129
            self.match(SpecParser.RSQUARE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





